<resources>
    <string name="app_name">OLIApp</string>
    <string name="csusm">CSUSM</string>
    <string name="login_screen">Login Screen</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="register_screen">Register Screen</string>
    <string name="already_have_account">Already have account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logoutProfile">LOGOUT</string>
</resources>