<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="104dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBTNLogin">

        <TextView
            android:id="@+id/textViewNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/comfortaa_light"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/purple_200"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/registerBTNLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:fontFamily="@font/comfortaa_light"
            android:text="@string/register"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/loginBTNLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/login"
        android:textColor="@color/purple_200"
        android:textSize="24sp"
        android:textStyle="bold"
        app:iconTint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPW" />

    <EditText
        android:id="@+id/loginUserID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/email"
        android:inputType="textPersonName"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegisterScreen" />

    <TextView
        android:id="@+id/textViewRegisterScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/login_screen"
        android:textColor="@color/purple_200"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInHeader" />

    <EditText
        android:id="@+id/loginPW"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginUserID" />

    <FrameLayout
        android:id="@+id/logInHeader"
        android:layout_width="409dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/oliCSUSMBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/csusm"
            android:scaleType="fitXY"
            android:visibility="visible"
            app:srcCompat="@drawable/sunrise_from_mcmahan1" />

        <ImageView
            android:id="@+id/loginScreenTxt"
            android:layout_width="168dp"
            android:layout_height="94dp"
            android:layout_gravity="end"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:srcCompat="@drawable/oli_flyer_edit1" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>